# ephys_preprocessing

./: .dockerignore  .gitignore  Dockerfile  README.md  batch_ibl_preprocess.bat  catgt_config.json  comparison_ks_phy_labels.ipynb  compose.yml  depth_estimation.py  do_catgt.py  do_kilosort.py  do_tprime.py  environment.yml  ephys_utils.py  kilosort_config.json  log_recording_info.py  merge_ks_phy_output.py  postprocess_anat.py  preprocessor.py  probe.py  pyproject.toml  readSGLX.py  recording.py  requirements.txt  sglx_meta_to_coords.py  tprime_config.json  waveform_metrics_utils.py
CwavesUtils/: cwave_config.json  do_cwaves.py  load_cwaves_output.ipynb  load_ks_phy_output.ipynb  plot_cwave_output.py
config/: inputs.txt  inputs_axel_full.txt  inputs_axel_test.txt  preprocess_config_si.yaml  preprocess_config_si_docker.yaml  preprocess_config_si_hpc_array.yaml  preprocess_config_si_hpc_array_axel.yaml  preprocess_config_si_hpc_array_axel_full.yaml
configs/: catgt_config.json  cwave_config.json  kilosort_config.json
ephys_preprocessing/: __init__.py
notebooks/: comparison_ks_phy_labels.ipynb  test_npyx_module.ipynb
plot_utils/: dj_to_rasters.py  plot_cwave_output.py  utils.py
preprocessing/: __init__.py  do_catgt.py  do_cwaves.py  do_kilosort.py  do_tprime.py  preprocess_config.yaml  preprocess_config_myriam_to_axel.yaml  preprocess_ibl_ephys_atlas.py  preprocess_spikesort.py  preprocess_sync.py  preprocessing.py  probe_depth.json  run_artifact_correction.py  run_bombcell.py  run_catgt.py  run_coil_correct.py  run_cwaves.py  run_dredge.py  run_kilosort.py  (+6 more)
(+71 files in other folders)
